--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.22",
+    "geist": "^1.5.1",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
